pre-commit configuration for code formatting

--- a/pyauadio_stream.ipynb
+++ b/pyauadio_stream.ipynb
@@ -598,20 +598,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b' world'\n"
+     ]
+    }
+   ],
    "source": [
-    "# stream = p.open(format = p.get_format_from_width(2),\n",
-    "#                 channels = 2,\n",
-    "#                 rate = 44100,\n",
-    "#                 input = True,\n",
-    "#                 output = True,\n",
-    "#                 input_device_index = dev_index,\n",
-    "#                 output_device_index = target_output_device,\n",
-    "#                 frames_per_buffer = 1024)\n",
+    "import io\n",
+    "in_memory = io.BytesIO()\n",
+    "in_memory.write(b' world')\n",
+    "in_memory.seek(0)  # go to the start of the stream\n",
+    "print(in_memory.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<connection.buffer.WavInfo object at 0x746375480bd0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"PyAudio Example: Play a wave file.\"\"\"\n",
+    "import wave, pyaudio\n",
+    "import os\n",
+    "from connection.buffer import WavInfo\n",
+    "os.environ['SDL_AUDIODRIVER'] = 'dsp'\n",
     "\n",
-    "\n"
+    "def play_wav2(wav_name, CHUNK=1024):\n",
+    "    p = pyaudio.PyAudio()\n",
+    "\n",
+    "    stream = None\n",
+    "    with open(wav_name, 'rb') as wf:\n",
+    "        while (len(block := wf.read(CHUNK))):\n",
+    "            if stream is None:\n",
+    "                header_bytes, block = block[:44], block[44:]\n",
+    "                header = WavInfo(header_bytes)\n",
+    "                print(header_bytes)\n",
+    "                print(header)\n",
+    "                stream = p.open(format=p.get_format_from_width(header.sample_width),\n",
+    "                        channels=header.num_channels,\n",
+    "                        rate=header.frame_rate,\n",
+    "                        frames_per_buffer=CHUNK,\n",
+    "                        output=True)\n",
+    "            if len(block):\n",
+    "                stream.write(block)\n",
+    "        stream.close()\n",
+    "    p.terminate()\n",
+    "\n",
+    "play_wav2(\".received_feedback/az63rhl3.wav\")"
    ]
   }
  ],
