bug fixe for streaming wavs

--- a/pyauadio_stream.ipynb
+++ b/pyauadio_stream.ipynb
@@ -619,22 +619,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<connection.buffer.WavInfo object at 0x746375480bd0>\n"
+      "2 8\n",
+      "4 1\n"
      ]
     }
    ],
    "source": [
     "\"\"\"PyAudio Example: Play a wave file.\"\"\"\n",
-    "import wave, pyaudio\n",
+    "import pyaudio\n",
     "import os\n",
     "from connection.buffer import WavInfo\n",
+    "\n",
     "os.environ['SDL_AUDIODRIVER'] = 'dsp'\n",
     "\n",
     "def play_wav2(wav_name, CHUNK=1024):\n",
@@ -645,21 +647,43 @@
     "        while (len(block := wf.read(CHUNK))):\n",
     "            if stream is None:\n",
     "                header_bytes, block = block[:44], block[44:]\n",
-    "                header = WavInfo(header_bytes)\n",
-    "                print(header_bytes)\n",
-    "                print(header)\n",
-    "                stream = p.open(format=p.get_format_from_width(header.sample_width),\n",
+    "                header = WavInfo(header_bytes, verbose=False)\n",
+    "                print(header.sample_width, p.get_format_from_width(\n",
+    "                    header.sample_width))\n",
+    "                stream = p.open(format=2 if header.sample_width == 4 else p.get_format_from_width(\n",
+    "                        header.sample_width),\n",
     "                        channels=header.num_channels,\n",
     "                        rate=header.frame_rate,\n",
     "                        frames_per_buffer=CHUNK,\n",
     "                        output=True)\n",
+    "                stream.start_stream()\n",
     "            if len(block):\n",
     "                stream.write(block)\n",
+    "        stream.stop_stream()\n",
     "        stream.close()\n",
     "    p.terminate()\n",
     "\n",
+    "play_wav2(\"voice/short.wav\")\n",
     "play_wav2(\".received_feedback/az63rhl3.wav\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obj=5\n",
+      "wav_size\n",
+      "obj=3\n",
+      "obj=10\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
