minor changes to rag and prompt

--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -2,19 +2,367 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pipeline import Pipeline\n",
-    "pipe = Pipeline()\n",
-    "result = pipe.process(user_name=\"Василий\", file_to_process=None, user_message=\"hello\", output_mode=\"audio\")"
+    "import os\n",
+    "def dataset_from_text_file(file_names):\n",
+    "    if isinstance(file_names, str):\n",
+    "        file_names = [file_names]\n",
+    "    for file_name in file_names:\n",
+    "        with open(file_name, 'r') as f:\n",
+    "            text = f.read()\n",
+    "        print(text)\n",
+    "    return None\n",
+    "data_dir = '../docs/interviews'\n",
+    "files = [os.path.join(data_dir, f) for f in os.listdir(data_dir)]\n",
+    "with open(files[0], 'r') as f:\n",
+    "    text = f.read()\n",
+    "# kapitza = dataset_from_text_file(file_names=files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install langchain spacy\n",
+    "# !python -m spacy download en_core_web_sm\n",
+    "from langchain.text_splitter import SpacyTextSplitter\n",
+    "text_splitter = SpacyTextSplitter(chunk_size=256, chunk_overlap=256//4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zipa/miniconda3/envs/unsloth_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
+      "==((====))==  Unsloth 2024.9.post3: Fast Llama patching. Transformers = 4.45.0.\n",
+      "   \\\\   /|    GPU: NVIDIA GeForce RTX 4090. Max memory: 23.635 GB. Platform = Linux.\n",
+      "O^O/ \\_/ \\    Pytorch: 2.4.1. CUDA = 8.9. CUDA Toolkit = 12.1.\n",
+      "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.28.post1. FA2 = False]\n",
+      " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n"
+     ]
+    }
+   ],
+   "source": [
+    "# functions to train and test\n",
+    "from unsloth import FastLanguageModel\n",
+    "from unsloth.chat_templates import get_chat_template\n",
+    "base_model, tokenizer = FastLanguageModel.from_pretrained( model_name = \"unsloth/llama-3-8b-Instruct-bnb-4bit\", # \"model\",\n",
+    "    max_seq_length = 8192, dtype = None, load_in_4bit = True)\n",
+    "tokenizer = get_chat_template(tokenizer, chat_template = \"llama-3\", \n",
+    "    mapping = {\"role\" : \"from\", \"content\" : \"value\", \"user\" : \"human\", \"assistant\" : \"gpt\"}, # ShareGPT style\n",
+    ")\n",
+    "FastLanguageModel.for_inference(base_model) \n",
+    "\n",
+    "def ask_llm(prompt, user, n_rep=1):\n",
+    "    inputs = tokenizer.apply_chat_template( [{\"system\": prompt,\\\n",
+    "                                          \"from\": \"human\", \\\n",
+    "                                          \"value\": user}],\n",
+    "    tokenize = True, add_generation_prompt = True, return_tensors = \"pt\").to(base_model.device)\n",
+    "    questions = []\n",
+    "    for _ in range(n_rep):\n",
+    "        outputs = base_model.generate(input_ids = inputs, max_new_tokens = 128, use_cache = True)\n",
+    "        full_output = tokenizer.batch_decode(outputs)\n",
+    "        answer = full_output[0].split('|end_header_id|>\\n\\n')[-1].rstrip('<|eot_id|>')\n",
+    "        questions.append(answer)\n",
+    "    \n",
+    "    return questions[0] if len(questions) == 1 else questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt1 = \"\"\"Ниже дан текст в форме вопроса, адресованному Сергею Капице. Пожалуйста, выведи новый {text}, представляющий из себя сокращенный вопрос,перепиcанный простыми словами.\n",
+    "[вопрос]: {question}.\n",
+    "Выведи ответ в формате JSON, используя только русский язык: {\"question\": {text}}.\"\"\"\n",
+    "prompt2 = \"\"\"Ниже дан текст в форме вопроса, адресованному Сергею Капице и его ответ.\n",
+    "Пожалуйста, выведи новый {text}, представляющий из себя сокращенный ответ, сохранивший стиль. Ответ должен по смыслу чётко соответствовать вопросу.\n",
+    "[вопрос]: {question}\n",
+    "[ответ]: {answer}\n",
+    "Выведи ответ в формате JSON, используя только русский язык: {\"answer\": {answer}}.\"\"\"\n",
+    "\n",
+    "prompt3 = \"\"\"На вход ты получил ```Текст```. Выдели несколько тем в тексте и перепиши его в виде отдельных абзацев, сохранив стиль.\"\"\"\n",
+    "prompt4 = \"\"\"На вход ты получил ```Ответ```. Придумай вопрос, подходящий к такому ответу.\"\"\"\n",
+    "question = \"\"\"Если взять поколения кому сегодня за сорок, навскидку они процитируют: \"О сколько нам открытий чудных готовит просвещенья дух...\" Так кто был популярнее, Вы, Сергей Петрович, или Александр Сергеевич?\"\"\"\n",
+    "answer = \"\"\"Не преувеличивайте, Пушкин, конечно, был популярнее. Алла Пугачева была популярнее...  Да, это стихотворение стало нашим брендом. Эпиграф нашел наш режиссер Левкович. Кстати, это стихотворение никогда не было опубликовано в сочинениях Пушкина. Оно рассеяно у него в отрывках... У Натана Эйдельмана есть целое эссе на эту тему.  Название же передачи - \"Очевидное-невероятное\" - предложила моя помощница Железова. По-моему, до этого оно появлялось в фильмах, снятых Киевской киностудией. Сегодня нам приходится это словосочетание защищать, поскольку его уже пытались несколько раз украсть. Мы даже специально получили авторское свидетельство на название телепередачи - \"Очевидное-невероятное\".\"\"\"\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "new_question = json.loads(ask_llm(\"\", prompt1.replace(\"{question}\", question)))['question']\n",
+    "new_answer = json.loads(ask_llm(\"\", prompt2.replace(\"{question}\", new_question).replace(\"{answer}\", answer)))['answer']\n",
+    "# ask_llm(\"\", prompt2.replace(\"{question}\", question).replace(\"{answer}\", answer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt3 = \"\"\"На вход ты получил ```Текст```. Выдели несколько тем в тексте и перепиши его в виде отдельных абзацев, сохранив стиль.\"\"\"\n",
+    "prompt3 = \"\"\"Ниже дан текст рассуждений Сергея Капицы. Перепиши этот текст в виде набора тезисов, сохранив стиль.\n",
+    "[текст]: {text}.\n",
+    "Выведи ответ в формате JSON, используя только русский язык: {\"theme0\": {тезис0}, \"theme1\": {тезис1}, ...}. Не добавляй больше ничего к выдаче.\"\"\"\n",
+    "ret = ask_llm(\"\", prompt3.replace(\"{text}\", answer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zipa/miniconda3/envs/unsloth_env/lib/python3.11/site-packages/spacy/pipeline/lemmatizer.py:211: UserWarning: [W108] The rule-based lemmatizer did not find POS annotation for one or more tokens. Check that your pipeline includes components that assign token.pos, typically 'tagger'+'attribute_ruler' or 'morphologizer'.\n",
+      "  warnings.warn(Warnings.W108)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(*[ans.strip() for ans in answer.split('.') if len(ans)], sep = '.\\n')\n",
+    "items = text_splitter.split_text(answer)\n",
+    "print(len(items))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Если взять поколения кому сегодня за сорок, навскидку они процитируют: \"О сколько нам открытий чудных готовит просвещенья дух...\" Так кто был популярнее, Вы, Сергей Петрович, или Александр Сергеевич?'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"evaluation\": 2} Если взять поколения кому сегодня за сорок, навскидку они процитируют: \"О сколько нам открытий чудных готовит просвещенья дух...\" Так кто был популярнее, Вы, Сергей Петрович, или Александр Сергеевич? Не преувеличивайте, Пушкин, конечно, был популярнее. Алла Пугачева была популярнее...  Да, это стихотворение стало нашим брендом. Эпиграф нашел наш режиссер Левкович. Кстати, это стихотворение никогда не было опубликовано в сочинениях Пушкина. Оно рассеяно у него в отрывках... У Натана Эйдельмана есть целое эссе на эту тему.  Название же передачи - \"Очевидное-невероятное\" - предложила моя помощница Железова. По-моему, до этого оно появлялось в фильмах, снятых Киевской киностудией. Сегодня нам приходится это словосочетание защищать, поскольку его уже пытались несколько раз украсть. Мы даже специально получили авторское свидетельство на название телепередачи - \"Очевидное-невероятное\".\n",
+      "{\"evaluation\": 4} Если взять поколения кому сегодня за сорок, навскидку они процитируют: \"О сколько нам открытий чудных готовит просвещенья дух...\" Так кто был популярнее, Вы, Сергей Петрович, или Александр Сергеевич? Не преувеличивайте, Пушкин был популярнее. Алла Пугачева была популярнее, и это стихотворение стало нашим брендом.\n",
+      "{\"evaluation\": 1} Кто был более известен, Сергей Капица или Пушкин? Не преувеличивайте, Пушкин, конечно, был популярнее. Алла Пугачева была популярнее...  Да, это стихотворение стало нашим брендом. Эпиграф нашел наш режиссер Левкович. Кстати, это стихотворение никогда не было опубликовано в сочинениях Пушкина. Оно рассеяно у него в отрывках... У Натана Эйдельмана есть целое эссе на эту тему.  Название же передачи - \"Очевидное-невероятное\" - предложила моя помощница Железова. По-моему, до этого оно появлялось в фильмах, снятых Киевской киностудией. Сегодня нам приходится это словосочетание защищать, поскольку его уже пытались несколько раз украсть. Мы даже специально получили авторское свидетельство на название телепередачи - \"Очевидное-невероятное\".\n",
+      "{\"evaluation\": 1} Кто был более известен, Сергей Капица или Пушкин? Не преувеличивайте, Пушкин был популярнее. Алла Пугачева была популярнее, и это стихотворение стало нашим брендом.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt_eval = \"\"\"Ниже дана пара вопрос-ответ, оцени их согласованность по логике по шкале от 0 до 5.\n",
+    "0 - вопрос и ответ не соотносятся друг с другом.\n",
+    "1 - в ответе слишком много лишних слов.\n",
+    "2 - в ответе много деталей, о которых никто не спрашивал.\n",
+    "3 - в ответе содержатся детали, не соответствующие вопросу.\n",
+    "4 - вопрос и ответ почти походят на диалог, но есть небольшая несогласованность, нечёткость.\n",
+    "5 - вопрос и ответ идеально подходят друг к другу.\n",
+    "[вопрос]: {question}\n",
+    "[ответ]: {answer}\n",
+    "Выведи оценку {value} в виде JSON: {\"evaluation\": {value}}. Не добавляй анализ и постронний текст.\"\"\"\n",
+    "for q in [question, new_question]:\n",
+    "    for a in [answer, new_answer]:\n",
+    "        text = ask_llm(\"\", prompt_eval.replace(\"{question}\", q).replace(\"{answer}\", a))\n",
+    "        print(text, q, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Не преувеличивайте, Пушкин был популярнее. Алла Пугачева была популярнее, и это стихотворение стало нашим брендом.'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CHATGPT prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = f\"\"\"Дан вопрос:\n",
+    "```{question}```\n",
+    "Дан ответ на этот вопрос:\n",
+    "```{answer}```\n",
+    "Вопрос и ответ очень размыты.\n",
+    "1. Перепиши вопрос простыми словами, выдели из ответа главную мысль и перепиши с сохранением стиля.\n",
+    "2. Раздели ответ на набор тезисов. Для каждого тезиса подготовь простой и лаконичный вопрос. Перепиши каждый тезис в виде ответа на этот вопрос с сохранением изначального стиля. Все сущности в вопросе должны быть чётко определены, ответ может ссылаться на понятия, ясные из контекста.\n",
+    "3. Все пары получившихся вопросов и ответов выведи массива пар в формате json с полями \"question\", \"answer\".\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[\n",
+    "    {\n",
+    "        \"question\": \"Кто из вас более известен: вы или Пушкин?\",\n",
+    "        \"answer\": \"Не преувеличивайте, Пушкин, конечно, был популярнее. Алла Пугачева была популярнее...\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Почему стихотворение стало брендом вашей передачи?\",\n",
+    "        \"answer\": \"Да, это стихотворение стало нашим брендом. Эпиграф нашел наш режиссер Левкович.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Где можно найти полное стихотворение Пушкина?\",\n",
+    "        \"answer\": \"Кстати, это стихотворение никогда не было опубликовано в сочинениях Пушкина. Оно рассеяно у него в отрывках...\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Есть ли исследование о стихотворении Пушкина?\",\n",
+    "        \"answer\": \"У Натана Эйдельмана есть целое эссе на эту тему.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Кто предложил название вашей передачи 'Очевидное-невероятное'?\",\n",
+    "        \"answer\": \"Название же передачи - 'Очевидное-невероятное' - предложила моя помощница Железова.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Где ранее использовалось это название?\",\n",
+    "        \"answer\": \"По-моему, до этого оно появлялось в фильмах, снятых Киевской киностудией.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Почему вы защищаете название вашей передачи?\",\n",
+    "        \"answer\": \"Сегодня нам приходится это словосочетание защищать, поскольку его уже пытались несколько раз украсть.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Как вы защищаете название вашей передачи?\",\n",
+    "        \"answer\": \"Мы даже специально получили авторское свидетельство на название телепередачи - 'Очевидное-невероятное'.\"\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import Dataset\n",
+    "\n",
+    "def interview_dataset(file=\"../finetuning/int1.txt\"):\n",
+    "    with open(file, 'r') as f:\n",
+    "        text = f.read()\n",
+    "    dataset = []\n",
+    "    for conv in data.split('\\n\\n'):\n",
+    "        if len(conv):\n",
+    "            roles = ['user', 'assistant']\n",
+    "            play = []\n",
+    "            for i_role, item in enumerate(conv.split('\\n')):\n",
+    "                play.append({'content': item.strip('–\\t').strip(' '), 'role': roles[i_role % 2]})\n",
+    "            dataset.append(play)    \n",
+    "    return Dataset.from_dict({'conversations': dataset})\n",
+    "    # [{'content': question, 'role': 'user'}, {'content': answer, 'role': 'assistant'}]\n",
+    "\n",
+    "data = interview_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['conversations'],\n",
+       "    num_rows: 34\n",
+       "})"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "kapitza",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
