--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -653,38 +653,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3,  7, 11, 11,  6,  0,  0,  0,  7,  4,  7, 10, 10,  4,  3,  3],\n",
-       "       [ 1,  8, 15, 13, 15, 11, 11,  4, 12, 10, 13, 10,  4,  3,  1,  1],\n",
-       "       [ 0,  3,  8,  4,  8, 13, 15,  4,  9,  0,  3,  2,  4,  9,  2,  4],\n",
-       "       [ 2, 14,  2,  6,  0,  3, 12, 11, 15, 11, 13, 10,  6,  1,  2,  6],\n",
-       "       [ 0, 12,  4, 12,  4, 12,  5, 12, 15, 14,  0,  0,  1,  2,  6,  1],\n",
-       "       [ 2, 14,  2, 15, 10, 14,  0, 12, 13, 14,  3,  2,  4,  7, 15,  6],\n",
-       "       [ 2, 15, 10, 14,  3,  1,  0, 12,  6,  8, 14,  7, 11, 14,  1,  1],\n",
-       "       [ 3, 12, 10, 15,  5,  0,  7,  5,  1,  2,  5,  1, 12, 14,  7,  4],\n",
-       "       [ 1,  1,  0,  8,  6,  7, 13, 11,  6,  7,  4,  2, 15,  5,  9,  0],\n",
-       "       [ 3,  2, 10, 11, 13, 14,  0, 12,  5,  8,  4,  0, 12, 11, 15,  6],\n",
-       "       [12, 10, 10, 15, 10, 15, 11, 13, 11, 11, 11, 10, 13, 14, 12,  5],\n",
-       "       [ 1,  7,  6, 12, 10, 13, 15,  4,  9,  8,  5,  0,  0,  1,  1,  3],\n",
-       "       [ 3,  1,  1,  8,  4,  3,  8,  6,  8,  4,  2, 10, 10, 11, 10,  5],\n",
-       "       [ 9,  7, 10, 11,  4,  9,  7, 15,  4,  2,  4,  0,  3, 12, 11,  4],\n",
-       "       [ 1,  8,  4,  1,  0, 12, 14,  9,  0,  7, 10, 10, 13, 13, 15,  6],\n",
-       "       [ 0,  0,  2, 10,  4,  1,  8,  5,  2,  5,  2, 10,  4,  2,  5,  1]],\n",
-       "      dtype=int32)"
+       "'Кhистина'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj"
+    "text = \"кристина. \"\n",
+    "text.strip(\".,! \").capitalize()"
    ]
   }
  ],
