time logging in Pipeline class

--- a/_experiments/pyauadio_stream.ipynb
+++ b/_experiments/pyauadio_stream.ipynb
@@ -669,21 +669,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "obj=5\n",
-      "wav_size\n",
-      "obj=3\n",
-      "obj=10\n"
+      "None\n",
+      "s\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# import os\n",
+    "# os.chdir('..')\n",
+    "\n",
+    "import time\n",
+    "from utils.logger import logger, log_mode\n",
+    "\n",
+    "class Pipeline:\n",
+    "    def __init__(self,\n",
+    "                 log = False):\n",
+    "        global log_mode\n",
+    "        if log:\n",
+    "            log_mode = \"s\"\n",
+    "\n",
+    "    @logger\n",
+    "    def set_user(self, user_name):\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "    @logger\n",
+    "    def process(self):\n",
+    "        time.sleep(3)\n",
+    "\n",
+    "demo_class = Pipeline(log=True)\n",
+    "# demo_class.set_user(\"вася\")\n",
+    "# demo_class.process()\n"
+   ]
   }
  ],
  "metadata": {
