added logger class

--- a/_experiments/pyauadio_stream.ipynb
+++ b/_experiments/pyauadio_stream.ipynb
@@ -669,22 +669,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import os\n",
     "# os.chdir('..')\n",
-    "\n",
     "import time\n",
     "from utils.logger import logger, log_mode\n",
     "\n",
@@ -704,8 +694,8 @@
     "        time.sleep(3)\n",
     "\n",
     "demo_class = Pipeline(log=True)\n",
-    "# demo_class.set_user(\"вася\")\n",
-    "# demo_class.process()\n"
+    "demo_class.set_user(\"вася\")\n",
+    "demo_class.process()"
    ]
   }
  ],
