--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -675,7 +675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kapitza",
+   "display_name": "unsloth_env",
    "language": "python",
    "name": "python3"
   },
