Streaming mode in LLMProcessor

--- a/_experiments/Datasets.ipynb
+++ b/_experiments/Datasets.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1302f31e-d421-4ca2-8fda-1b19b0541ee4",
    "metadata": {},
    "outputs": [],
@@ -215,47 +215,45 @@
     "                    dataset.append([{'content': question, 'role': 'user'}, {'content': answer, 'role': 'assistant'}])\n",
     "    return Dataset.from_dict({'conversations': dataset})\n",
     "\n",
-    "def interview_dataset(file=\"../finetuning/int1.txt\"):\n",
+    "def interview_dataset(file=\"../finetuning/int12.txt\"):\n",
     "    with open(file, 'r') as f:\n",
     "        text = f.read()\n",
     "    dataset = []\n",
-    "    for conv in data.split('\\n\\n'):\n",
+    "    for conv in text.split('\\n\\n'):\n",
     "        if len(conv):\n",
     "            roles = ['user', 'assistant']\n",
     "            play = []\n",
     "            for i_role, item in enumerate(conv.split('\\n')):\n",
     "                play.append({'content': item.strip('–\\t').strip(' '), 'role': roles[i_role % 2]})\n",
     "            dataset.append(play)    \n",
-    "    return Dataset.from_dict({'conversations': dataset})\n",
-    "    # [{'content': question, 'role': 'user'}, {'content': answer, 'role': 'assistant'}]\n"
+    "    return Dataset.from_dict({'conversations': dataset})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "c51e755a-c414-4d0f-9839-c177cc0e2b0f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# kapitza\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# all_data = ['../Капица/Тексты/Монологи.txt', '../Капица/Тексты/Interview1.txt', '../Капица/Тексты/Interview2.txt', '../Капица/Тексты/AIF_compile.txt']\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# kapitza = dataset_from_text_file(file_names=all_data[0:1], chunk_sizes=[512])\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m kapitza \u001b[38;5;241m=\u001b[39m \u001b[43minterview_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m kapitza \u001b[38;5;241m=\u001b[39m kapitza\u001b[38;5;241m.\u001b[39mmap(formatting_prompts_func, batched \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m,)\n",
-      "Cell \u001b[0;32mIn[3], line 51\u001b[0m, in \u001b[0;36minterview_dataset\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m     49\u001b[0m     text \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m     50\u001b[0m dataset \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m---> 51\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m conv \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(conv):\n\u001b[1;32m     53\u001b[0m         roles \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124massistant\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# kapitza\n",
-    "# all_data = ['../Капица/Тексты/Монологи.txt', '../Капица/Тексты/Interview1.txt', '../Капица/Тексты/Interview2.txt', '../Капица/Тексты/AIF_compile.txt']\n",
-    "# kapitza = dataset_from_text_file(file_names=all_data[0:1], chunk_sizes=[512])\n",
+    "# fine-tune on kapitza dataset\n",
     "kapitza = interview_dataset()\n",
-    "kapitza = kapitza.map(formatting_prompts_func, batched = True,)"
+    "kapitza = kapitza.map(formatting_prompts_func, batched = True,)\n",
+    "model, loss = run_experiment(base_model, tokenizer, kapitza, r=8, lora_alpha=8, learning_rate=1e-04, max_seq_length=256, max_steps=10, target_modules=[\n",
+    "    \"q_proj\", \"k_proj\", \"v_proj\",\n",
+    "            \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\",\n",
+    "                          ])\n",
+    "test_model(model, max_new_tokens=256)\n",
+    "model.save_pretrained_gguf(\"kapitza_ft\", tokenizer, quantization_method = \"q4_k_m\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "804bfd47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -263,13 +261,7 @@
    "id": "90a7e50d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model, loss = run_experiment(base_model, tokenizer, kapitza, r=4, lora_alpha=4, learning_rate=1e-04, max_seq_length=256, max_steps=10, target_modules=[\n",
-    "    \"q_proj\", \"k_proj\", \"v_proj\",\n",
-    "            \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\",\n",
-    "                          ])\n",
-    "test_model(model, max_new_tokens=256)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
