name llm processing

--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -671,11 +671,165 @@
     "text = \"кристина. \"\n",
     "text.strip(\".,! \").capitalize()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_id\" in DeployedModel has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in HuggingFaceLLM has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_kwargs\" in HuggingFaceLLM has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in HuggingFaceInferenceAPI has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in TextGenerationInference has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_url\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_path\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_kwargs\" in LlamaCPP has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir('..')\n",
+    "from src.llm import LLMProcessor\n",
+    "llm = LLMProcessor(\"prompt.txt\", \"docs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLM: Setting an engine for user user\n"
+     ]
+    }
+   ],
+   "source": [
+    "custom_prompt = \"\"\"Ты - система аутентификации для ASR. Пользователя просили представиться. Выведи в ответ только его или её имя в именительном (звательном) падеже и отчество, если он указал его.\n",
+    "Фамилию игнорируй, если пользователь специально не обозначил полное обращение. Если ввод нерелевантен, выведи !\n",
+    "\n",
+    "Например:\n",
+    "Ввод: Андрюшей звать. Вывод: Андрюша.\n",
+    "Ввод: Меня зовут Катя. Вывод: Катя.\n",
+    "Ввод: Антоном меня звать. Вывод: Антон.\n",
+    "Ввод: Иван Петрович. Вывод: Иван Петрович.\n",
+    "Ввод: Меня зовут Амаяк Акопян. Вывод: Амаяк.\n",
+    "Ввод: Леди Гага. Вывод: Леди Гага.\n",
+    "Ввод: Джон Джонс. Вывод: Джон.\n",
+    "Ввод: Хуанг Ли Вьет. Вывод: Хуанг.\n",
+    "Ввод: Си Цзиньпин. Вывод: Цзиньпин.\n",
+    "Ввод: Меня зовут Патель. Вывод: Патель.\n",
+    "Ввод: Иван Мухин. Только так и никак иначе. Вывод: Иван Мухин.\n",
+    "Ввод: Мухин Иван. Я люблю свою фамилию. Вывод: Иван Мухин.\n",
+    "\"\"\"\n",
+    "llm.set_engine(user_name=None, reset=True, custom_system_prompt=custom_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Марфушей звать -> Марфушей\n",
+      "Меня зовут Лара -> Лара\n",
+      "Меня зовут Лариса -> Лариса\n",
+      "Меня зовут Крис -> Крис\n",
+      "Меня зовут Джон Доу -> !\n",
+      "Меня зовут Владимир Путин -> Владимир\n",
+      "Звать Любовь не надо, явится незваной -> !\n",
+      "Зови меня зайкой -> !\n",
+      "Меня зовут Сирано де Бержерак. -> Сирано\n",
+      "Бонд. Джеймс Бонд. -> !\n",
+      "Василий и Петька -> !\n",
+      "Джеймс Кэмерон -> !\n",
+      "Сергей Капица -> Сергей\n",
+      "Рината Литвинова -> Рината\n",
+      "Меня зовут Иван Артемьевич Пупкин, но для друзей я Ванечка. -> Иван\n",
+      "Беруши в уши -> !\n",
+      "Кофе с молоком -> !\n",
+      "Какашка -> !\n",
+      "Неоценимый вклад в науку -> !\n",
+      "Bond. James Bond -> !\n",
+      "Я скрываю своё имя, ведь это не главное. У меня есть кличка Виктор. -> Виктор\n",
+      "Морозов Илья. Называй меня только так и никак иначе. Обращайся по имени и фамилии. -> Морозов Илья\n",
+      "Меня зовут Эван. Но я люблю, чтобы ко мне обращались Гипергалактус. -> Гипергалактус\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm.chat_engine.reset()\n",
+    "for user_answer in [\n",
+    "    \"Марфушей звать\",\n",
+    "    \"Меня зовут Лара\",\n",
+    "    \"Меня зовут Лариса\",\n",
+    "    \"Меня зовут Крис\",\n",
+    "    \"Меня зовут Джон Доу\",\n",
+    "    \"Меня зовут Владимир Путин\",\n",
+    "    \"Звать Любовь не надо, явится незваной\",\n",
+    "    \"Зови меня зайкой\",\n",
+    "    \"Меня зовут Сирано де Бержерак.\",\n",
+    "    \"Бонд. Джеймс Бонд.\",\n",
+    "    \"Василий и Петька\",\n",
+    "    \"Джеймс Кэмерон\",\n",
+    "    \"Сергей Капица\",\n",
+    "    \"Рината Литвинова\",\n",
+    "    \"Меня зовут Иван Артемьевич Пупкин, но для друзей я Ванечка.\",\n",
+    "    \"Беруши в уши\",\n",
+    "    \"Кофе с молоком\",\n",
+    "    \"Какашка\",\n",
+    "    \"Неоценимый вклад в науку\",\n",
+    "    \"Bond. James Bond\",\n",
+    "    \"Я скрываю своё имя, ведь это не главное. У меня есть кличка Виктор.\",\n",
+    "    \"Морозов Илья. Называй меня только так и никак иначе. Обращайся по имени и фамилии.\",\n",
+    "    \"Меня зовут Эван. Но я люблю, чтобы ко мне обращались Гипергалактус.\",\n",
+    "    ]:\n",
+    "    user_name = llm.chat_engine.chat(user_answer).response\n",
+    "    print(user_answer, '->', user_name)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "unsloth_env",
+   "display_name": "kapitza",
    "language": "python",
    "name": "python3"
   },
